--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.20",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@react-spring/web": "^9.0.0-rc.3",
     "@turf/turf": "^6.3.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
@@ -24,6 +26,7 @@
     "powerbi-visuals-utils-dataviewutils": "2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-spring": "^8.0.27",
     "victory": "^35.4.6"
   },
   "devDependencies": {
